| Bug #23950 | misplaced code in mysqld.cc, main() | ||
|---|---|---|---|
| Submitted: | 3 Nov 2006 16:41 | Modified: | 3 Feb 2007 2:04 |
| Reporter: | Sergei Golubchik | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Chad MILLER | Target Version: | |
[3 Nov 2006 16:41]
Sergei Golubchik
[29 Dec 2006 15:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/17462 ChangeSet@1.2389, 2006-12-26 14:56:41-05:00, cmiller@calliope.local.cmiller +1 -0 Bug#23950: misplaced code in mysqld.cc, main() Moved MY_INIT() to top of main(), where it should be.
[29 Dec 2006 15:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/17461 ChangeSet@1.2389, 2006-12-26 15:22:53-05:00, cmiller@calliope.local.cmiller +1 -0 Bug#23950: misplaced code in mysqld.cc, main() Moved MY_INIT() to top of main(), where it should be.
[29 Dec 2006 21:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/17477 ChangeSet@1.2389, 2006-12-29 16:07:33-05:00, cmiller@calliope.local.cmiller +1 -0 Bug#23950: misplaced code in mysqld.cc, main() Moved MY_INIT() to top of main(), where it should be.
[2 Jan 2007 17:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/17533 ChangeSet@1.2362, 2007-01-02 12:56:48-05:00, cmiller@zippy.cornsilk.net +1 -0 Bug#23950: misplaced code in mysqld.cc, main() We should initialize before anything else.
[31 Jan 2007 19:19]
Chad MILLER
Available in 5.0.36, 5.1.15-beta. Shouldn't need doc'n.
[3 Feb 2007 2:04]
Paul DuBois
Indeed, no doc'n needed. :-)
