Bug#23950: misplaced code in mysqld.cc, main()

We should initialize before anything else.